--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.6",
+    "axios": "^0.27.2",
     "bootstrap": "5.2.1",
     "chart.js": "3.9.1",
     "core-js": "3.25.1",
     "dropzone": "6.0.0-beta.2",
-    "pinia": "2.0.22",
+    "pinia": "^2.0.22",
     "quill": "1.3.7",
     "vue": "3.2.39",
     "vue-flatpickr-component": "9.0.6",
@@ -39,6 +40,6 @@
     "eslint-plugin-vue": "9.4.0",
     "prettier": "2.7.1",
     "sass": "1.54.9",
-    "vite": "3.1.0"
+    "vite": "^3.1.0"
   }
 }
